@@ -1,4 +1,4 @@
-.TH GPLIB 1 "2007-10-27" "gputils-0.13.6" "Linux user's manual"
+.TH GPLIB 1 "2007-10-27" "gputils-0.13.7" "Linux user's manual"
 .SH NAME
 gplib \- GNU PIC librarian
 .SH SYNOPSIS
