@@ -1,4 +1,4 @@
-.TH GPVC 1 "2007-10-27" "gputils-0.13.6" "Linux user's manual"
+.TH GPVC 1 "2007-10-27" "gputils-0.13.7" "Linux user's manual"
 .SH NAME
 gpvc \- GNU PIC COD file viewer
 .SH SYNOPSIS
